--- a/github-webhook-proxy/package.json
+++ b/github-webhook-proxy/package.json
@@ -5,8 +5,11 @@
   "author": "Tom Coleman <tom@thesnail.org>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "node-fetch": "^2.6.1",
+    "path": "^0.12.7",
     "query-string": "^6.13.8"
   },
   "scripts": {
