--- a/github-webhook-proxy/.gitignore
+++ b/github-webhook-proxy/.gitignore
@@ -14,15 +14,11 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# cert
-certificate.crt
-certificate.csr
-private.key
 
 npm-debug.log*
 yarn-debug.log*
