--- a/github-webhook-proxy/package.json
+++ b/github-webhook-proxy/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "author": "Tom Coleman <tom@thesnail.org>",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
